# missing_metro_py

./: .clinerules  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.clinerules/: caliperpy.md  general.md
notebooks/: cell_automata.ipynb  cell_automata_hw.ipynb
scripts/: gtfs.py  la_city_zoning.py  la_map.py  la_zoning.py  routes (1).csv
scripts/traffic_eng/: README.md  cell_automata_hw.py  test_nasch.py
scripts/transcad/: 4_step_model.py  README.md  amarillo_project.py  caliper_4_step_model.py  caliper_helpers.py  claude.py  constants.py  deepseek.py  run_cross_classification.py
